feat: i update experience data

--- a/app/globals.css
+++ b/app/globals.css
@@ -1516,7 +1516,7 @@ main {
   transform: translateX(-50%);
 }
 
-.timeline-progress-fill {
+/* .timeline-progress-fill {
   position: absolute;
   top: 0;
   left: 0;
@@ -1525,7 +1525,18 @@ main {
   background: linear-gradient(180deg, var(--accent), #ff8080);
   transform-origin: top;
   transform: scaleY(0);
+} */
+ .timeline-progress-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(6, 182, 212); /* solid scroll color */
+  transform-origin: top;
+  transform: scaleY(0);
 }
+
 
 /* Timeline Item */
 .timeline-item {
